--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
 	<string name="editar_ruta">Edit Route</string>
 	<string name="eliminar">Remove</string>
 	<string name="cancelar">Cancel</string>
+	<string name="direccion">Address…</string>
 	<string name="estadisticas">Statistics</string>
 	<string name="imagen">Picture</string>
 	<string name="en_zona_aviso">Inside Alert Zone</string>
