--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
 	<string name="estadisticas_format" formatted="false">Length:\t\t\t\t\t\t%s\nTime:\t\t\t\t\t\t\t%s\nAvg Speed:\t\t\t\t%s\nMin Speed:\t\t\t\t%s\nMax Speed:\t\t\t%s\nMin Altitude:\t\t%s\nMax Altitude:\t\t%s\n</string>
 
 	<string name="err_get_ruta_pts">Failed to retrieve route data</string>
+	<string name="err_conn_google">Failed to connect to Google services: %s</string>
 
 </resources>
