--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
 	<string name="clave">Password</string>
 	<string name="clave_confirmar">Repeat password</string>
 	<string name="config">Settings</string>
+	<string name="privacy_policy">Privacy Policy</string>
 	<string name="configuracion">Settings</string>
 	<string name="cuenta">Login</string>
 	<string name="descripcion">Description</string>
@@ -140,5 +141,6 @@
 
 	<string name="err_get_ruta_pts">Failed to retrieve route data</string>
 	<string name="err_conn_google">Failed to connect to Google services: %s</string>
+	<string name="no_camera_hardware">There is no camera hardware in this device</string>
 
 </resources>
