--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
 	<string name="pref_header_opciones">Options</string>
 	<string name="pref_header_opciones_sum">Settings…</string>
 	<string name="pref_auto_arranque">Start alert service at boot up</string>
-	<string name="pref_save_login">Save login &amp; password</string>
+	<string name="pref_save_login">Save login and password</string>
 
 	<string name="pref_header_notifications">Alerts</string>
 	<string name="pref_header_notifications_sum">Alerts settings…</string>
