--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -129,4 +129,5 @@
 	<string name="err_conn_google">Failed to connect to Google services: %s</string>
 	<string name="privacy_policy">Privacy Policy</string>
 	<string name="no_camera_hardware">There is no camera hardware in this device</string>
+    <string name="error_img_path">Failed trying to get the image path</string>
 </resources>
