--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -130,4 +130,16 @@
 	<string name="privacy_policy">Privacy Policy</string>
 	<string name="no_camera_hardware">There is no camera hardware in this device</string>
     <string name="error_img_path">Failed trying to get the image path</string>
+
+
+	<string name="in_vehicle">In a vehicle</string>
+	<string name="on_bicycle">On a bicycle</string>
+	<string name="on_foot">On foot</string>
+	<string name="running">Running</string>
+	<string name="still">Still</string>
+	<string name="tilting">Tilting</string>
+	<string name="unknown">Unknown activity</string>
+	<string name="walking">Walking</string>
+	<string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
+    <string name="active_gps">The tracking service needs you to activate the GPS</string>
 </resources>
