--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
 	<string name="seguro_eliminar">Are you sure you want to remove?</string>
 	<string name="seguro_salir">You made changes. Do you want to save?</string>
 	<string name="ask_to_enable_gps">The tracking service needs you to activate the GPS</string>
-	<string name="send">Send</string>
+	<string name="login">Log in</string>
 	<string name="sin_lugar">A location must be stablished…</string>
 	<string name="sin_nombre">A name must be stablished…</string>
 	<string name="sin_posicion">No location</string>
@@ -159,9 +159,9 @@
 	<string name="walking">Walking</string>
 	<string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
 
-	<string name="ignore_battery_optimization"> Route tracking service needs to disable energy optimizations.\n\n
+	<!-- string name="ignore_battery_optimization"> Route tracking service needs to disable energy optimizations.\n\n
 		In the next window, select \"All apps\" and pick this app from the list, then select \"Don\'t optimize\" and \"Done\".
-		</string>
+	</string -->
 	<!-- string name="ignore_battery_optimization">For route tracking service to work, the app needs to disable energy optimizations. Please do the following:\n
 		In the next window, select \"All apps\" and pick this app from the list, then select \"Dont optimize\" and save.
 		</string -->
