--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -153,6 +153,6 @@
 	<string name="unidentifiable_activity">Actividad no identificada: %1$d</string>
 	<string name="ask_to_enable_gps">El servicio de rastreo necesita que actives la localización por GPS</string>
 	<string name="ok">Aceptar</string>
-    <string name="pref_save_all">Guardar todos los puntos, sin filtro inteligente</string>
+    <string name="pref_save_all">Incluir puntos imprecisos</string>
     <string name="pref_tracking_seconds">Periodo rastreo (segundos)</string>
 </resources>
