--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -113,6 +113,7 @@
 	<string name="ok_eliminar_aviso">Se eliminó el lugar</string>
 	<string name="ok_eliminar_lugar">Se eliminó el aviso</string>
 	<string name="ok_eliminar_ruta">Se eliminó la ruta</string>
+	<string name="on_timeout">Latencia excesiva, compruebe conexión a Internet</string>
 
 	<string name="widget_lugar">Lugares</string>
 	<string name="widget_ruta">Rutas</string>
