--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
 	<string name="ok_guardar_aviso">The Alert was saved</string>
 	<string name="ok_guardar_lugar">The Point was saved</string>
 	<string name="ok_guardar_ruta">The Route was saved</string>
+	<string name="on_timeout">Task timeout, check Internet connection</string>
 
 	<string name="widget_lugar">Points</string>
 	<string name="widget_ruta">Routes</string>
